--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -1,16 +1,46 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
-<h2>Home page</h2>
+<div class="container mt-5">
+    <div class="row">
+
 {% for n in news %}
 
-{{ n.title }} <br>
-{{ n.date }} <br>
-{{ n.description }} <br>
-{{ n.article }} <br>
+        <div class="card mt-5" style="width: 18rem;">
+          <img src="{{ n.image }}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{ n.title }}</h5>
+                <p class="card-text">{{ n.description }}</p>
+<!--                <a href="#" class="btn btn-primary">Read</a>-->
+            </div>
+        </div>
 
 {% endfor %}
+    </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--{{ n.title }} <br>-->
+<!--{{ n.date }} <br>-->
+<!--<img src="{{ n.image }}" alt="Image" style="width: 50%;"> <br>-->
+<!--{{ n.description }} <br>-->
+<!--{{ n.article }} <br>-->
+
+
 
 {% endblock %}
