--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -9,12 +9,13 @@
 
 {% for n in news %}
 
-        <div class="card m-2" style="width: 18rem;">
-          <img src="{{ n.image }}" class="card-img-top" alt="...">
+        <div class="card m-2" style="width: 18rem;" onclick="window.location='{% url 'article' n.id  %}'">
+<!--            <a href="{% url 'article' n.id  %}" style="width:100%;height:100%;display:block;">Your link</a>-->
+            <img src="{{ n.image }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{ n.title }}</h5>
                 <p class="card-text">{{ n.description }}</p>
-                <a href="#" class="btn btn-black">Read</a>
+<!--                <a href="{% url 'article' n.id  %}" class="btn btn-dark">Read</a>-->
             </div>
         </div>
 
