fixed bug with displaying pictures

--- a/news/templates/article.html
+++ b/news/templates/article.html
@@ -16,7 +16,7 @@
                     <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{ news.category }}</a>
                 </header>
                 <!-- Preview image figure-->
-                <figure class="mb-4"><img class="img-fluid rounded" src="{{ news.image }}" alt="..."></figure>
+                <figure class="mb-4"><img class="img-fluid rounded" src="{{ news.image.url }}" alt="..."></figure>
                 <!-- Post content-->
                 <section class="mb-5">
                     <p class="fs-5 mb-4">{{ news.article }}</p>
