--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <div class="container mt-4 mb-4">
+    <h1>{{ page_name }}</h1>
     <div class="row">
 
 {{ error }}
@@ -11,7 +12,7 @@
 
         <div class="card m-2" style="width: 18rem;" onclick="window.location='{% url 'article' n.id  %}'">
 <!--            <a href="{% url 'article' n.id  %}" style="width:100%;height:100%;display:block;">Your link</a>-->
-            <img src="{{ n.image }}" class="card-img-top" alt="...">
+            <img src="{{ n.image.url }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{ n.title }}</h5>
                 <p class="card-text">{{ n.description }}</p>
