--- a/news/templates/article.html
+++ b/news/templates/article.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% if news %}
         <!-- Page content-->
         <div class="container mt-5">
             <div class="row">
@@ -67,6 +68,15 @@
                         </div>
                     </section>
                 </div>
+{% else %}
+            <div class="container mt-5">
+            <div class="row">
+                <div class="col-lg-8">
+                    <header class="mb-4">
+                    <h3>{{ error }}</h3>
+                        </header>
+                    </div>
+{% endif %}
                 <!-- Side widgets-->
                 <div class="col-lg-4">
                     <!-- Search widget-->
