--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -44,9 +44,13 @@
                         <div class="row">
                             <div class="col">
                                 <ul class="list-unstyled mb-0">
+                                    {% if categories %}
                                     {% for cat in categories %}
                                     <li><a href="{% url 'news' cat.id %}">{{ cat }}</a></li>
                                     {% endfor %}
+                                    {% else %}
+                                    <li>Categories not yet</li>
+                                    {% endif %}
                                 </ul>
                             </div>
 
