fully working auth

--- a/accounts/templates/accounts/sign_in_user.html
+++ b/accounts/templates/accounts/sign_in_user.html
@@ -10,7 +10,7 @@
             <form method="POST" action="">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Sign Up</button>
+                <button type="submit">Log In</button>
             </form>
         </div>
 
