--- a/news/templates/article.html
+++ b/news/templates/article.html
@@ -4,7 +4,7 @@
 
 {% if news %}
         <!-- Page content-->
-        <div class="container mt-5">
+        <div class="container mt-4 mb-4">
             <div class="row">
                 <div class="col-lg-8">
                     <!-- Post content-->
@@ -78,9 +78,9 @@
                     </div>
 {% endif %}
                 <!-- Side widgets-->
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <!-- Search widget-->
-                    <div class="card mb-4">
+                    <div class="card mb-4 shadow-lg">
                         <div class="card-header">Search</div>
                         <div class="card-body">
                             <div class="input-group">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                     <!-- Side widget-->
-                    <div class="card mb-4">
+                    <div class="card mb-4 shadow-lg">
                         <div class="card-header">Side Widget</div>
                         <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
                     </div>
