--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -4,24 +4,30 @@
 
 <div class="container mt-4 mb-4">
     <h1>{{ page_name }}</h1>
-    <h3>{{ error }}</h3>
     <div class="row">
         <div class="col-lg-8">
             <div class="row">
 
-            {% for n in news %}
+                {% if news %}
 
-                <div class="card m-2 shadow-lg" style="width: 17rem; cursor:pointer;" onclick="window.location='{% url 'article' n.id  %}'">
-                <img src="{{ n.image.url }}" class="card-img-top" alt="...">
+                {% for n in news %}
+
+                <div class="card m-2 shadow-lg" style="width: 17rem; cursor:pointer;"
+                     onclick="window.location='{% url 'article' n.id  %}'">
+                    <img src="{{ n.image.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{ n.title }}</h5>
                         <p class="card-text">{{ n.description }}</p>
                         <div class="text-muted fst-italic mb-2">{{ n.date }}</div>
-    <!--                    <a href="{% url 'article' n.id  %}" class="btn btn-dark">Read</a>-->
+                        <!--                    <a href="{% url 'article' n.id  %}" class="btn btn-dark">Read</a>-->
                     </div>
                 </div>
 
-            {% endfor %}
+                {% endfor %}
+
+                {% else %}
+                <h3>{{ error }}</h3>
+                {% endif %}
 
             </div>
         </div>
@@ -30,40 +36,43 @@
             <!-- Search widget-->
             <div class="card mb-4 shadow-lg">
                 <div class="card-header">Search</div>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search">
-                            <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                        </div>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input class="form-control" type="text" placeholder="Enter search term..."
+                               aria-label="Enter search term..." aria-describedby="button-search">
+                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
                     </div>
                 </div>
-                <!-- Categories widget-->
-                <div class="card mb-4 shadow-lg">
-                    <div class="card-header">Categories</div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col">
-                                <ul class="list-unstyled mb-0">
-                                    {% if categories %}
-                                    {% for cat in categories %}
-                                    <li><a href="{% url 'news' cat.id %}">{{ cat }}</a></li>
-                                    {% endfor %}
-                                    {% else %}
-                                    <li>Categories not yet</li>
-                                    {% endif %}
-                                </ul>
-                            </div>
+            </div>
+            <!-- Categories widget-->
+            <div class="card mb-4 shadow-lg">
+                <div class="card-header">Categories</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <ul class="list-unstyled mb-0">
+                                {% if categories %}
+                                {% for cat in categories %}
+                                <li><a href="{% url 'news' cat.id %}">{{ cat }}</a></li>
+                                {% endfor %}
+                                {% else %}
+                                <li>Categories not yet</li>
+                                {% endif %}
+                            </ul>
+                        </div>
 
-                        </div>
                     </div>
                 </div>
-                <!-- Side widget-->
-                <div class="card mb-4 shadow-lg">
-                    <div class="card-header">Side Widget</div>
-                    <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+            </div>
+            <!-- Side widget-->
+            <div class="card mb-4 shadow-lg">
+                <div class="card-header">Side Widget</div>
+                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use,
+                    and feature the Bootstrap 5 card component!
                 </div>
             </div>
         </div>
+    </div>
 </div>
 
 {% endblock %}
