--- a/accounts/templates/accounts/editarticle.html
+++ b/accounts/templates/accounts/editarticle.html
@@ -6,11 +6,14 @@
 <div class="container m-5">
     <div class="row">
         <div class="col-lg-8">
+            {% if error %}
+            <p style="color: red;">Bad data, try again.</p>
             <p style="color: red;">{{ error }}</p>
+            {% endif %}
             <form method="POST" enctype='multipart/form-data'>
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Create</button>
+                <button type="submit">Save</button>
             </form>
         </div>
 
