--- a/templates/base.html
+++ b/templates/base.html
@@ -5,68 +5,71 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
     <title>{{ page_name }}</title>
 </head>
 <body>
-<!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">News blog</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-            </ul>
+    <div class="wrapper">
+    <!-- Responsive navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'home' %}">News blog</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                    </ul>
 
-            {% if user.is_authenticated %}
-            <span class="navbar-text">
-                Welcome, <a class="badge rounded-pill text-bg-light" href="{% url 'profile' %}">{{ user.username }}</a>
-            </span>
-            <span class="navbar-text">
-                <form action="{% url 'logout' %}" method="POST">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-success ms-4">Logout</button>
-                </form>
-            </span>
-            {% else %}
-            <span class="navbar-text">
-                <div class="btn-group" role="group" aria-label="Basic example">
-                    <a href="{% url 'signin' %}">
-                        <button type="button" class="btn btn-outline-success ms-2 me-2">Sign In</button>
-                    </a>
-                    <a href="{% url 'signup' %}">
-                        <button type="button" class="btn btn-success ms-2 me-2">Sign Up</button>
-                    </a>
+                    {% if user.is_authenticated %}
+                    <span class="navbar-text">
+                        Welcome, <a class="badge rounded-pill text-bg-light" href="{% url 'profile' %}">{{ user.username }}</a>
+                    </span>
+                    <span class="navbar-text">
+                        <form action="{% url 'logout' %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-success ms-4">Logout</button>
+                        </form>
+                    </span>
+                    {% else %}
+                    <span class="navbar-text">
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <a href="{% url 'signin' %}">
+                                <button type="button" class="btn btn-outline-success ms-2 me-2">Sign In</button>
+                            </a>
+                            <a href="{% url 'signup' %}">
+                                <button type="button" class="btn btn-success ms-2 me-2">Sign Up</button>
+                            </a>
+                        </div>
+                    </span>
+                    {% endif %}
                 </div>
-            </span>
-            {% endif %}
-        </div>
+            </div>
+        </nav>
+
+        <!-- Page content-->
+        <div class="content">{% block content %} {% endblock %}</div>
+
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; News Blog 2022</p></div>
+        </footer>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+                crossorigin="anonymous"></script>
     </div>
-</nav>
-
-<!-- Page content-->
-
-{% block content %} {% endblock %}
-
-<!-- Footer-->
-<footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; News Blog 2022</p></div>
-</footer>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
 </body>
 </html>
