--- a/news/templates/article.html
+++ b/news/templates/article.html
@@ -78,7 +78,7 @@
                     </div>
 {% endif %}
                 <!-- Side widgets-->
-                <div class="col-lg-3">
+                <div class="col-lg-3 mt-5">
                     {% if user.is_authenticated %}
                         {% if user == news.author %}
                             <!-- Actions widget-->
