--- a/accounts/templates/accounts/sign_in_user.html
+++ b/accounts/templates/accounts/sign_in_user.html
@@ -3,20 +3,13 @@
 {% block content %}
 
 <!-- SignUp form -->
-<div class="container m-5">
-    <div class="row">
-        <div class="col-lg-8">
-            <h3 style="color: red;">{{ error }}</h3>
-            <form method="POST" action="">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Log In</button>
-            </form>
-        </div>
-
-        <!-- Side widgets-->
-        <div class="col-lg-4"></div>
-    </div>
+<div class="position-absolute top-50 start-50 translate-middle">
+    <h3 style="color: red;">{{ error }}</h3>
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-success">Log In</button>
+    </form>
 </div>
 
 {% endblock %}
