--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -30,10 +30,10 @@
             </div>
             <div class="col col-sm-3">
                 <div class="card mb-4">
-<!--                    <div class="card-header">Actions</div>-->
                     <div class="card-body">
                         <div class="btn-group btn-edit-delete">
                             <a href="{% url 'editarticle' article.id %}" class="btn btn-warning">Edit</a>
+                            <a href="#" class="btn btn-secondary">Withdraw</a>
                             <a href="{% url 'deletearticle' article.id %}" class="btn btn-danger">Delete</a>
                         </div>
                     </div>
