--- a/accounts/templates/accounts/newarticle.html
+++ b/accounts/templates/accounts/newarticle.html
@@ -6,11 +6,17 @@
 <div class="container m-5">
     <div class="row">
         <div class="col-lg-8">
+            {% if error %}
+            <p style="color: red;">Bad data, try again.</p>
             <p style="color: red;">{{ error }}</p>
+            {% endif %}
             <form method="POST" enctype='multipart/form-data'>
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Create</button>
+                <button type="submit" class="btn btn-success">Create</button>
+                <a href="{% url 'profile' %}">
+                    <button type="button" class="btn btn-outline-secondary ms-2 me-2">Cancel</button>
+                </a>
             </form>
         </div>
 
