models update, new model Comment

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -21,7 +21,7 @@
                        aria-current="true">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">{{ article.title }}</h5>
-                            <small>{{ article.date|date:'M j Y H:i' }}</small>
+                            <small>{{ article.date_of_create|date:'M j Y H:i' }}</small>
                         </div>
                         <p class="mb-1">{{ article.description }}</p>
                         <small>{{ article.category }}</small>
