--- a/news/templates/article.html
+++ b/news/templates/article.html
@@ -14,7 +14,7 @@
                             <!-- Post title-->
                             <h1 class="fw-bolder mb-1">{{ news.title }}</h1>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on {{ news.date }} by {{ news.author }}</div>
+                            <div class="text-muted fst-italic mb-2">Posted on {{ news.date_of_create|date:'M j Y H:i' }} by {{ news.author }}</div>
                             <!-- Post categories-->
                             <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{ news.category }}</a>
                         </header>
