--- a/news/templates/news/editarticle.html
+++ b/news/templates/news/editarticle.html
@@ -14,7 +14,10 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit" class="btn btn-success">Save</button>
-                <a href="{% url 'profile' %}">
+                <a href="{% url 'deletearticle' pk %}">
+                    <button type="button" class="btn btn-outline-danger ms-2 me-2">Delete</button>
+                </a>
+                <a href="{% url 'manage' %}">
                     <button type="button" class="btn btn-outline-secondary ms-2 me-2">Cancel</button>
                 </a>
             </form>
