--- a/news/templates/news/article.html
+++ b/news/templates/news/article.html
@@ -23,7 +23,7 @@
                 <figure class="mb-4"><img class="img-fluid rounded" src="{{ news.image.url }}" alt="..."/></figure>
                 <!-- Post content-->
                 <section class="mb-5">
-                    <p class="fs-5 mb-4">{{ news.article }}</p>
+                    <p class="fs-5 mb-4">{{ news.article | linebreaks }}</p>
                 </section>
             </article>
             <!-- Comments section-->
