--- a/news/templates/news/manage_articles.html
+++ b/news/templates/news/manage_articles.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col">
                 <div class="list-group">
-                    <a href="{% url 'article' article.id  %}" class="list-group-item list-group-item-action"
+                    <a href="{{ article.get_absolute_url }}" class="list-group-item list-group-item-action"
                        aria-current="true">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">{{ article.title }}</h5>
