--- a/news/templates/news/article.html
+++ b/news/templates/news/article.html
@@ -101,8 +101,9 @@
                         <div class="card-header">Actions</div>
                         <div class="card-body">
                             <div class="btn-group btn-edit-delete">
-                                <a href="{% url 'editarticle' news.id %}" class="btn btn-warning">Manage this
-                                    article</a>
+                                <a href="{% url 'edit_article' news.id %}" class="btn btn-warning">
+                                    Manage this article
+                                </a>
                             </div>
                         </div>
                     </div>
