--- a/templates/news/edit_article.html
+++ b/templates/news/edit_article.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">Save</button>
-    <a href="{% url 'delete_article' pk %}">
+    <a href="{# url 'delete_article' pk #}">
         <button type="button" class="btn btn-outline-danger ms-2 me-2">Delete</button>
     </a>
     <a href="{% url 'manage_articles' %}">
