--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="#">Administration</a></li>
+                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Administration</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
