--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -24,11 +24,35 @@
 </div>
 
 {% endfor %}
+{% if page_obj.has_other_pages %}
+<nav aria-label="Page navigation example">
+    <ul class="pagination bs-dark-rgb justify-content-end m-3">
+        {% if page_obj.has_previous %}
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+        {% endif %}
+        {% for page in paginator.page_range %}
+        {% if page_obj.number == page %}
+        <li class="page-item active"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
+        {% else %}
+        <li class="page-item"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
 
 {% else %}
 
-<h3>{{ error }}</h3>
-<p>Create new article</p>
+<h5>{{ error }}</h5>
+<br><br><br><br><br>
+{% if user.is_authenticated %}
+<p><a href="{% url 'new_article' %}">Create</a> a new article from the action block or in your personal <a href="{% url 'profile' %}">profile</a></p>
+{% else %}
+<p><a href="{% url 'signin' %}">Signin</a> or <a href="{% url 'signup' %}">Signup</a> to create a new article</p>
+{% endif %}
 
 {% endif %}
 {% endblock %}
