def view auth changed on class CreateView, LoginView

--- a/templates/accounts/sign_in_user.html
+++ b/templates/accounts/sign_in_user.html
@@ -2,10 +2,9 @@
 
 {% block content %}
 
-<!-- SignUp form -->
+<!-- SignIn form -->
 <div class="position-absolute top-50 start-50 translate-middle">
-    <h3 style="color: red;">{{ error }}</h3>
-    <form method="POST" action="">
+    <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-success">Log In</button>
