--- a/templates/news/base_news.html
+++ b/templates/news/base_news.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="container mt-4 mb-4">
+<div class="container mt-1 mb-1">
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 mt-5">
             <div class="row">
 
                 {% block news %} {% endblock %}
